example/error/offline.js
/**
 * Meet UI, Meet You!
 * @author jayen
 * @version v1.0.1
 */
// demo/error.js
Page({
    /**
     * 页面的初始数据
     */
    data: {}
});
